Fix header stickiness on mobile
The default --file-margins value on mobile is '8px 24px', while it's
single-valued, '32px', on desktop.

I added a little JavaScript that adds a --file-margins-top using
--file-margins.

It seems to work fine on desktop and mobile.

For https://github.com/adamwolf/sticky-table-headers/issues/4

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ settings:
 .markdown-source-view.mod-cm6 .cm-table-widget th,
 .markdown-reading-view .el-table thead th {
     position: sticky;
-    top: calc(-1 * var(--file-margins) - 1px); /* Handle border gap */
+    top: calc(-1 * var(--file-margins-top, 1px) - 1px); /* Handle border gap */
     z-index: 1000;
 }
 
